[gd_scene load_steps=2 format=3 uid="uid://d03ox0x3t4x3l"]

[ext_resource type="Script" uid="uid://8x1xyk6ueivn" path="res://scenes/example_for_audio.gd" id="1_jql1w"]

[node name="ExampleForAudio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jql1w")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Hello World"

[node name="StartMusicButton" type="Button" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 391.0
offset_right = 556.0
offset_bottom = 422.0
text = "Start Music"

[node name="StopMusicButton" type="Button" parent="."]
layout_mode = 0
offset_left = 587.0
offset_top = 390.0
offset_right = 682.0
offset_bottom = 421.0
text = "Stop Music"

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="."]
event_name = "event:/MainEngine"
event_guid = "{67c84d6e-9f3f-4b8b-b613-4c01523b0a83}"
fmod_parameters/Throttle/id = 4446562785797959856
fmod_parameters/Throttle = 0.5
fmod_parameters/Throttle/variant_type = 3

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://audio/fmod/banks/Master.strings.bank", "res://audio/fmod/banks/Master.bank", "res://audio/fmod/banks/SFX.bank"]

[connection signal="pressed" from="StartMusicButton" to="." method="_on_start_music_button_pressed"]
[connection signal="pressed" from="StopMusicButton" to="." method="_on_stop_music_button_pressed"]
